@@ -40,6 +40,8 @@ test-xfail-test-double-scalbln = yes
 test-xfail-test-double-scalbn = yes
 test-xfail-test-fenv-return = yes
 test-xfail-test-fexcept = yes
+test-xfail-test-float-double-add = yes
+test-xfail-test-float-double-sub = yes
 test-xfail-test-float-finite-fma = yes
 test-xfail-test-float-finite-llrint = yes
 test-xfail-test-float-finite-llround = yes
@@ -48,6 +50,8 @@ test-xfail-test-float-finite-lround = yes
 test-xfail-test-float-finite-scalbln = yes
 test-xfail-test-float-finite-scalbn = yes
 test-xfail-test-float-fma = yes
+test-xfail-test-float-ldouble-add = yes
+test-xfail-test-float-ldouble-sub = yes
 test-xfail-test-float-llrint = yes
 test-xfail-test-float-llround = yes
 test-xfail-test-float-lrint = yes
@@ -61,6 +65,14 @@ test-xfail-test-float32-finite-lrint = yes
 test-xfail-test-float32-finite-lround = yes
 test-xfail-test-float32-finite-scalbln = yes
 test-xfail-test-float32-finite-scalbn = yes
+test-xfail-test-float32-float128-add = yes
+test-xfail-test-float32-float128-sub = yes
+test-xfail-test-float32-float32x-add = yes
+test-xfail-test-float32-float32x-sub = yes
+test-xfail-test-float32-float64-add = yes
+test-xfail-test-float32-float64-sub = yes
+test-xfail-test-float32-float64x-add = yes
+test-xfail-test-float32-float64x-sub = yes
 test-xfail-test-float32-fma = yes
 test-xfail-test-float32-llrint = yes
 test-xfail-test-float32-llround = yes
