@@ -5,6 +5,8 @@ glibc (2.29-0experimental2) UNRELEASED; urgency=medium
     - Fix math tests on alpha.
   * debian/sysdeps/alpha.mk, debian/control.in/main: do not force build with
     gcc-8.
+  * debian/testsuite-xfail-debian.mk: XFAIL narrowing add/sub tests, they
+    have always failed since they have been introduced.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 03 Sep 2019 21:49:38 +0200
 
